--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "school-behavior-ai",
+  "name": "sanad",
   "private": true,
   "version": "1.0.0",
-  "description": "School Behavior AI",
+  "description": "Sanad",
   "repository": "",
   "license": "UNLICENSED",
   "scripts": {
@@ -22,7 +22,7 @@
     "framework7-icons": "^5.0.5",
     "material-icons": "^1.13.14",
     "skeleton-elements": "^4.0.1",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "cpy-cli": "^6.0.0",
